add style and other staff

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="iframe"></div>
-</body>
+<script type="text/javascript" src="app.js"></script></body>
 <script src="bootstrap-dist/js/jquery.min.js"></script>
 <script src="bootstrap-dist/js/bootstrap.min.js"></script>
 
