--- a/app/popup/index.html
+++ b/app/popup/index.html
@@ -43,6 +43,6 @@
         &quot;Java is to JavaScript as ham is to hamster." - Jeremy Keith
     </footer>
 
-</body>
+<script type="text/javascript" src="popup.js"></script></body>
 
 </html>
