--- a/src/client/index.html
+++ b/src/client/index.html
@@ -70,6 +70,7 @@
             <div>
                 <button type="button" class="btn btn-warning mb-2" id="jalalRun">Run</button>
                 <button type="button" class="btn btn-success mb-2" id="saveSchema">Save Schema</button>
+                <button type="button" class="btn btn-success mb-2" id="getData">Get Schema</button>
             </div>
             <div id="resultTable"></div>
         </div>
