--- a/app/popup/index.html
+++ b/app/popup/index.html
@@ -21,7 +21,7 @@
 
     <main id="main">
         <section id="homePage">
-            <div class="article">
+            <!-- <div class="article">
                 <h3>Title</h3>
                 <p>Description</p>
                 <button class="run">run💥</button>
@@ -35,7 +35,7 @@
                 <h3>Title 3</h3>
                 <p>Description</p>
                 <button class="run">run💥</button>
-            </div>
+            </div> -->
         </section>
     </main>
 
