script file auto inject off

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -75,6 +75,7 @@
         </div>
     </div>
 </body>
+<script src="app.js"></script>
 <script src="bootstrap-dist/js/jquery.min.js"></script>
 <script src="bootstrap-dist/js/bootstrap.min.js"></script>
 
