--- a/app/client/index.html
+++ b/app/client/index.html
@@ -74,7 +74,8 @@
             <div id="resultTable"></div>
         </div>
     </div>
-<script type="text/javascript" src="app.js"></script></body>
+</body>
+<script src="app.js"></script>
 <script src="bootstrap-dist/js/jquery.min.js"></script>
 <script src="bootstrap-dist/js/bootstrap.min.js"></script>
 
