--- a/src/client/download/download.html
+++ b/src/client/download/download.html
@@ -32,13 +32,7 @@
             <div class="row">
                 <nav class="col-md-3 d-none d-md-block bg-light sidebar">
                     <div class="sidebar-sticky">
-                        <ul class="nav flex-column">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">
-                                    Dashboard
-                                </a>
-                            </li>
-                        </ul>
+                        <div id="schema_list"></div>
                     </div>
                 </nav>
 
