new download data scrape done

--- a/app/client/download.html
+++ b/app/client/download.html
@@ -51,7 +51,7 @@
                             </div>
                         </div>
                     </div>
-
+                    <button id="data_loading"></button>
                     <div id="result_table" class="table-responsive"></div>
 
                 </main>
