text, url, htlm data type option added

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -51,6 +51,13 @@
                     <div class="col-12">
                         <input type="text" class="form-control" name="colName" placeholder="Column Name">
                     </div>
+                    <div class="col-12">
+                        <select name="contentType" class="form-control">
+                            <option value="text">Text</option>
+                            <option value="url">URL</option>
+                            <option value="html">HTML</option>
+                        </select>
+                    </div>
                     <div class="col-9">
                         <input type="text" class="form-control" name="colCls" placeholder="Class Name">
                     </div>
