add direction text

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -38,10 +38,13 @@
                         <input type="text" class="form-control" name="rowCls" placeholder="Class Name">
                     </div>
                     <div class="col-3">
-                        <button type="button" class="btn btn-primary" id="startPickMouse">Drag</button>
+                        <button type="button" class="btn btn-primary" id="startPickMouse">
+                            🖱
+                        </button>
                     </div>
                 </div>
                 <div class="checkbox-dom">
+                    <p>Click mouse icon and point your mouse on desire element then press "S" on keyboard </p>
                 </div>
             </div>
         </div>
@@ -62,9 +65,10 @@
                         <input type="text" class="form-control" name="colCls" placeholder="Class Name">
                     </div>
                     <div class="col-3">
-                        <button type="button" class="btn btn-primary mouseMove-col" data-col="colNum1">Drag</button>
+                        <button type="button" class="btn btn-primary mouseMove-col" data-col="colNum1">🖱</button>
                     </div>
                     <div class="class-checkbox-dom">
+                        <p>Click mouse icon and point your mouse on desire element then press "S" on keyboard </p>
                     </div>
                 </div>
                 <div id="addAnotherDom"></div>
