--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -9,8 +9,22 @@
 </head>
 
 <body>
-    <div id="signup"></div>
-    <div id="app-wrapper"></div>
+    <header id="header">
+        <h1>Data Scraper !!!</h1>
+        <div class="header-opt">
+            <input type="text" name="search">
+            <button id="newSchema">New Schema</button>
+        </div>
+    </header>
+
+    <main id="main">
+        <section id="homePage">
+        </section>
+    </main>
+
+    <footer id="footer">
+        &quot;Either I will find a way, or I will make one" -Sir Philip Sidney
+    </footer>
 
 </body>
 
