--- a/src/client/index.html
+++ b/src/client/index.html
@@ -67,7 +67,7 @@
                     <div class="col-3">
                         <button type="button" class="btn btn-primary mouseMove-col" data-col="colNum1">🖱</button>
                     </div>
-                    <div class="class-checkbox-dom">
+                    <div class="col-12 class-checkbox-dom">
                         <p>Click mouse icon and point your mouse on desire element then press "S" on keyboard </p>
                     </div>
                 </div>
