--- a/src/client/index.html
+++ b/src/client/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div id="addAnotherDom"></div>
                 <div>
-                    <button type="button" class="btn btn-success mt-3" id="addMoreCol">ADD ANOTHER</button>
+                    <button type="button" class="btn btn-success mt-3 w-100" id="addMoreCol">ADD ANOTHER</button>
                 </div>
             </div>
         </div>
