download full session data

--- a/app/client/download.html
+++ b/app/client/download.html
@@ -53,7 +53,7 @@
                     </div>
                     <button id="data_loading"></button>
                     <div id="result_table" class="table-responsive"></div>
-
+                    <div id="download_table" style="display: none;"></div>
                 </main>
             </div>
         </div>
